--- a/plugin/src/main/resources/messages/PdfViewerBundle.properties
+++ b/plugin/src/main/resources/messages/PdfViewerBundle.properties
@@ -19,6 +19,9 @@ pdf.viewer.settings.group.general=General
 pdf.viewer.settings.reload.document=Reload document on change
 pdf.viewer.settings.sidebar.viewer.default=Default sidebar view mode
 pdf.viewer.settings.mustache.fonts.path=Fonts path
+pdf.viewer.settings.mustache.preview.layout.label=Preview layout
+pdf.viewer.settings.mustache.preview.layout.vertical=Split vertically
+pdf.viewer.settings.mustache.preview.layout.horizontal=Split horizontally
 
 pdf.viewer.settings.group.colors.document=Document Colors
 pdf.viewer.settings.colors.document.with.theme=Invert document colors based on theme
