added a service for single mustache context processing and other improvements wip

--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,7 @@
               language="PDF"
               fieldName="INSTANCE"
               implementationClass="com.firsttimeinforever.intellij.pdf.viewer.lang.PdfFileType"/>
+    <projectService serviceInterface="com.firsttimeinforever.intellij.pdf.viewer.mustache.MustacheContextService" serviceImplementation="com.firsttimeinforever.intellij.pdf.viewer.mustache.MustacheContextServiceImpl"/>
     <fileEditorProvider implementation="com.firsttimeinforever.intellij.pdf.viewer.ui.editor.PdfFileEditorProvider"/>
     <httpRequestHandler implementation="com.firsttimeinforever.intellij.pdf.viewer.jcef.PdfStaticServer"/>
 
