--- a/plugin/src/main/resources/messages/PdfViewerBundle.properties
+++ b/plugin/src/main/resources/messages/PdfViewerBundle.properties
@@ -22,6 +22,7 @@ pdf.viewer.settings.mustache.fonts.path=Fonts path
 pdf.viewer.settings.mustache.preview.layout.label=Preview layout
 pdf.viewer.settings.mustache.preview.layout.vertical=Split vertically
 pdf.viewer.settings.mustache.preview.layout.horizontal=Split horizontally
+pdf.viewer.settings.mustache.preview.use.mock.label=Use mock
 
 pdf.viewer.settings.group.colors.document=Document Colors
 pdf.viewer.settings.colors.document.with.theme=Invert document colors based on theme
