--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -29,8 +29,8 @@
     <statusBarWidgetFactory id="com.firsttimeinforever.intellij.pdf.viewer.ui.widgets.PdfDocumentPageStatusBarWidget"
                             implementation="com.firsttimeinforever.intellij.pdf.viewer.ui.widgets.PdfDocumentPageStatusBarWidgetFactory"/>
 
-    <toolWindow id="Sample Calendar" secondary="true" icon="AllIcons.Toolwindows.WebToolWindow" anchor="right"
-                factoryClass="com.firsttimeinforever.intellij.pdf.viewer.mustache.toolwindow.CalendarToolWindowFactory"/>
+    <toolWindow id="Mustache Tool" secondary="true" icon="AllIcons.Toolwindows.WebToolWindow" anchor="right"
+                factoryClass="com.firsttimeinforever.intellij.pdf.viewer.mustache.toolwindow.MustacheToolWindowFactory"/>
   </extensions>
 
   <applicationListeners>
