working tool window

--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -30,7 +30,7 @@
                             implementation="com.firsttimeinforever.intellij.pdf.viewer.ui.widgets.PdfDocumentPageStatusBarWidgetFactory"/>
 
     <toolWindow id="Mustache Tool"
-                icon="AllIcons.Toolwindows.ToolWindowHierarchy" anchor="right" doNotActivateOnStart="true"
+                icon="AllIcons.Toolwindows.ToolWindowHierarchy" anchor="right"
                 factoryClass="com.firsttimeinforever.intellij.pdf.viewer.mustache.toolwindow.MustacheToolWindowFactory"/>
   </extensions>
 
