--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-pluginName = intellij-pdf-viewer
+pluginName = intellij-pdf-viewer-mustache-enhanced
 group = com.firsttimeinforever.intellij.pdf.viewer
-version = 0.15.0
+version = 1.0.1
 
 # To run with AS 2021.3.1 Canary 5
 #platformVersion = 213.6777.52
@@ -8,7 +8,9 @@ version = 0.15.0
 #IntelliJ IDEA 2021.1.2 Preview
 platformVersion = 2023.1
 pluginSinceVersion = 223.1
-pluginUntilVersion = 299.*
+#it is recommended to be set to the latest available intellij version
+#https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html#earlier-versions
+pluginUntilVersion = 241.*
 pluginVerifierIdeVersions = 213.6777.52, 222.3739.54
 
 texifyVersion = 0.7.29
